--- a/index.html
+++ b/index.html
@@ -13,37 +13,36 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            overflow: hidden; /* Keeps hearts inside */
+            font-family: 'Arial', sans-serif;
+            overflow: hidden;
         }
 
-        h1 { color: #d32f2f; text-shadow: 2px 2px white; }
+        h1 { color: #d32f2f; margin-bottom: 30px; }
 
         .photo-container {
             display: flex;
-            gap: 15px;
-            margin-bottom: 30px;
+            gap: 20px;
+            margin-bottom: 50px;
             flex-wrap: wrap;
             justify-content: center;
         }
 
-        .photo-container img {
-            width: 150px;
-            height: 150px;
+        /* Heart Shape Mask */
+        .heart-photo {
+            width: 200px;
+            height: 200px;
             object-fit: cover;
-            border-radius: 15px;
-            border: 5px solid white;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            /* Creates the heart shape */
+            clip-path: path("M100 36.1C122.3 11.2 158.4 10.6 180.3 33.3C201.2 54.9 198.5 91.5 178.6 116.8C159.2 141.4 116.3 181.7 103.9 193.1C101.6 195.2 98.4 195.2 96.1 193.1C83.7 181.7 40.8 141.4 21.4 116.8C1.5 91.5 -1.2 54.9 19.7 33.3C41.6 10.6 77.7 11.2 100 36.1Z");
+            background-color: #ff4081;
+            border: 4px solid white;
         }
 
         .buttons {
-            position: relative;
-            width: 100%;
-            height: 100px;
             display: flex;
-            justify-content: center;
-            align-items: center;
             gap: 20px;
+            height: 60px;
+            align-items: center;
         }
 
         button {
@@ -52,24 +51,22 @@
             border-radius: 50px;
             border: none;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: all 0.2s ease;
         }
 
-        #yesBtn { background-color: #ff4081; color: white; box-shadow: 0 4px 15px rgba(255, 64, 129, 0.4); }
+        #yesBtn { background-color: #ff4081; color: white; z-index: 10; }
 
         #noBtn {
             background-color: #9e9e9e;
             color: white;
-            position: absolute;
+            position: relative;
         }
 
-        /* Heart Animation */
-        .heart {
+        .heart-fall {
             position: fixed;
             top: -10%;
             color: #ff4081;
             font-size: 20px;
-            user-select: none;
             z-index: -1;
             animation: fall linear forwards;
         }
@@ -84,9 +81,9 @@
 <h1>Will you be my Valentine? ❤️</h1>
 
 <div class="photo-container">
-    <img src="GS3.jpeg" alt="gs 1">
-    <img src="GS1.jpeg" alt="gs 2">
-    <img src="GS2.jpeg" alt="gs 3">
+    <img src="GS3.jpeg" class="heart-photo" alt="Photo 1">
+    <img src="GS1.jpeg" class="heart-photo" alt="Photo 2">
+    <img src="GS2.jpeg" class="heart-photo" alt="Photo 3">
 </div>
 
 <div class="buttons">
@@ -95,32 +92,58 @@
 </div>
 
 <script>
-    // Falling Hearts Logic
+    // Falling Hearts (Limited amount)
     function createHeart() {
         const heart = document.createElement('div');
-        heart.classList.add('heart');
+        heart.classList.add('heart-fall');
         heart.innerHTML = '❤️';
         heart.style.left = Math.random() * 100 + 'vw';
-        heart.style.animationDuration = Math.random() * 3 + 2 + 's';
-        heart.style.opacity = Math.random();
+        heart.style.animationDuration = Math.random() * 3 + 4 + 's';
+        heart.style.opacity = Math.random() * 0.5;
         document.body.appendChild(heart);
-
-        setTimeout(() => { heart.remove(); }, 5000);
+        setTimeout(() => { heart.remove(); }, 6000);
     }
-    setInterval(createHeart, 500); // Adjust this number for more/less hearts
+    setInterval(createHeart, 800);
 
-    // Runaway No Button Logic
     const noBtn = document.getElementById('noBtn');
+    let moveCount = 0;
+
+    const dares = [
+        "No",
+        "Are you sure?",
+        "Try again! 😜",
+        "Missed me!",
+        "You can't click this!",
+        "Give up yet? 😏",
+        "Just click Yes already!"
+    ];
+
     noBtn.addEventListener('mouseover', () => {
+        // Move the button randomly
         const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
         const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+
+        noBtn.style.position = 'absolute';
         noBtn.style.left = x + 'px';
         noBtn.style.top = y + 'px';
+
+        // Change text to dare her
+        moveCount++;
+        if (moveCount < dares.length) {
+            noBtn.innerText = dares[moveCount];
+        } else {
+            noBtn.innerText = dares[dares.length - 1];
+        }
     });
 
-    // Yes Button Logic
     document.getElementById('yesBtn').addEventListener('click', () => {
-        alert("Geweet jy kon nie nee se nie😊❤️");
+        document.body.innerHTML = `
+                <div style="text-align:center; margin-top:200px;">
+                    <h1 style="font-size:4rem;">Geweet jy kon nie nee se nie😊❤️</h1>
+                    <p style="font-size:1.5rem;">I love you!</p>
+                    <div style="font-size:100px;">😘</div>
+                </div>
+            `;
     });
 </script>
 </body>
