--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Valentine ❤️</title>
+    <title>Vir Suaney❤️</title>
     <style>
         body {
             background-color: #ffebee;
@@ -32,7 +32,6 @@
             width: 200px;
             height: 200px;
             object-fit: cover;
-            /* Creates the heart shape */
             clip-path: path("M100 36.1C122.3 11.2 158.4 10.6 180.3 33.3C201.2 54.9 198.5 91.5 178.6 116.8C159.2 141.4 116.3 181.7 103.9 193.1C101.6 195.2 98.4 195.2 96.1 193.1C83.7 181.7 40.8 141.4 21.4 116.8C1.5 91.5 -1.2 54.9 19.7 33.3C41.6 10.6 77.7 11.2 100 36.1Z");
             background-color: #ff4081;
             border: 4px solid white;
