--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vir Suaney❤️</title>
+    <title>Vir Suaney!❤️</title>
     <style>
         body {
             background-color: #ffebee;
@@ -14,34 +14,36 @@
             min-height: 100vh;
             margin: 0;
             font-family: 'Arial', sans-serif;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
-        h1 { color: #d32f2f; margin-bottom: 30px; }
+        h1 { color: #d32f2f; margin-bottom: 20px; text-align: center; padding: 0 10px; }
 
         .photo-container {
             display: flex;
             gap: 20px;
-            margin-bottom: 50px;
+            margin-bottom: 40px;
             flex-wrap: wrap;
             justify-content: center;
         }
 
-        /* Heart Shape Mask */
         .heart-photo {
-            width: 200px;
-            height: 200px;
+            width: 280px;
+            height: 280px;
             object-fit: cover;
-            clip-path: path("M100 36.1C122.3 11.2 158.4 10.6 180.3 33.3C201.2 54.9 198.5 91.5 178.6 116.8C159.2 141.4 116.3 181.7 103.9 193.1C101.6 195.2 98.4 195.2 96.1 193.1C83.7 181.7 40.8 141.4 21.4 116.8C1.5 91.5 -1.2 54.9 19.7 33.3C41.6 10.6 77.7 11.2 100 36.1Z");
+            clip-path: path("M140 50.5C171.2 15.7 221.8 14.8 252.4 46.6C281.7 76.9 277.9 128.1 250 163.5C222.9 198 162.8 254.4 145.5 270.3C142.2 273.3 137.8 273.3 134.5 270.3C117.2 254.4 57.1 198 30 163.5C2.1 128.1 -1.7 76.9 27.6 46.6C58.2 14.8 108.8 15.7 140 50.5Z");
             background-color: #ff4081;
             border: 4px solid white;
         }
 
+        .hug-photo { object-position: center 20%; }
+
         .buttons {
             display: flex;
-            gap: 20px;
-            height: 60px;
+            flex-direction: column;
             align-items: center;
+            gap: 20px;
+            min-height: 200px;
         }
 
         button {
@@ -53,12 +55,17 @@
             transition: all 0.2s ease;
         }
 
-        #yesBtn { background-color: #ff4081; color: white; z-index: 10; }
+        #yesBtn { background-color: #ff4081; color: white; z-index: 100; white-space: nowrap; }
+        #noBtn { background-color: #9e9e9e; color: white; z-index: 10; }
 
-        #noBtn {
-            background-color: #9e9e9e;
-            color: white;
-            position: relative;
+        #countdown {
+            margin-top: 30px;
+            padding: 15px;
+            background: rgba(255, 255, 255, 0.5);
+            border-radius: 15px;
+            color: #d32f2f;
+            font-weight: bold;
+            text-align: center;
         }
 
         .heart-fall {
@@ -70,17 +77,23 @@
             animation: fall linear forwards;
         }
 
-        @keyframes fall {
-            to { transform: translateY(110vh) rotate(360deg); }
-        }
+        @keyframes fall { to { transform: translateY(110vh) rotate(360deg); } }
+
+        /* Hidden YouTube Player */
+        #music-player { display: none; }
     </style>
 </head>
 <body>
 
+<iframe id="music-player" width="0" height="0"
+        src="https://www.youtube.com/watch?v=3LmSjmcUNh8"
+        frameborder="0">
+</iframe>
+
 <h1>Will you be my Valentine? ❤️</h1>
 
 <div class="photo-container">
-    <img src="GS3.jpeg" class="heart-photo" alt="Photo 1">
+    <img src="GS3.jpeg" class="heart-photo hug-photo" alt="Photo 1">
     <img src="GS1.jpeg" class="heart-photo" alt="Photo 2">
     <img src="GS2.jpeg" class="heart-photo" alt="Photo 3">
 </div>
@@ -90,8 +103,25 @@
     <button id="noBtn">No</button>
 </div>
 
+<div id="countdown">Aftel na Valentynsdag...</div>
+
 <script>
-    // Falling Hearts (Limited amount)
+    // YouTube API Music Trigger
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+        player = new YT.Player('music-player');
+    }
+
+    // Start music on first interaction
+    document.addEventListener('click', function() {
+        player.playVideo();
+    }, { once: true });
+
     function createHeart() {
         const heart = document.createElement('div');
         heart.classList.add('heart-fall');
@@ -104,42 +134,49 @@
     }
     setInterval(createHeart, 800);
 
-    const noBtn = document.getElementById('noBtn');
-    let moveCount = 0;
+    const valentineDate = new Date("Feb 14, 2026 00:00:00").getTime();
+    setInterval(function() {
+        const now = new Date().getTime();
+        const distance = valentineDate - now;
+        const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        document.getElementById("countdown").innerHTML = "Aftel na Valentynsdag: " + days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+    }, 1000);
 
-    const dares = [
-        "No",
-        "Are you sure?",
-        "Try again! 😜",
-        "Missed me!",
-        "You can't click this!",
-        "Give up yet? 😏",
-        "Just click Yes already!"
-    ];
+    const noBtn = document.getElementById('noBtn');
+    const yesBtn = document.getElementById('yesBtn');
+    let moveCount = 0;
+    let yesSize = 1.2;
+
+    const dares = ["No", "Is jy seker??", "Try again! 😜", "Miss click!!", "Jy kan nie die click nie😏", "Gaan jy ooit opgee??", "Fine, Jy kan hom maar click"];
 
     noBtn.addEventListener('mouseover', () => {
-        // Move the button randomly
-        const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-        const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
-
-        noBtn.style.position = 'absolute';
-        noBtn.style.left = x + 'px';
-        noBtn.style.top = y + 'px';
-
-        // Change text to dare her
-        moveCount++;
-        if (moveCount < dares.length) {
+        if (moveCount < dares.length - 1) {
+            const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+            const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+            noBtn.style.position = 'absolute';
+            noBtn.style.left = x + 'px';
+            noBtn.style.top = y + 'px';
+            moveCount++;
             noBtn.innerText = dares[moveCount];
-        } else {
-            noBtn.innerText = dares[dares.length - 1];
         }
     });
 
-    document.getElementById('yesBtn').addEventListener('click', () => {
+    noBtn.addEventListener('click', () => {
+        if (moveCount >= dares.length - 1) {
+            yesSize += 0.5;
+            yesBtn.style.transform = `scale(${yesSize})`;
+            noBtn.innerText = "Verkeerde knoppie, probeer die groot een😜";
+        }
+    });
+
+    yesBtn.addEventListener('click', () => {
         document.body.innerHTML = `
-                <div style="text-align:center; margin-top:200px;">
-                    <h1 style="font-size:4rem;">Geweet jy kon nie nee se nie😊❤️</h1>
-                    <p style="font-size:1.5rem;">I love you!</p>
+                <div style="text-align:center; margin-top:150px;">
+                    <h1 style="font-size:4rem;">Geweet jy kon nie Nee se nie🤗❤️</h1>
+                    <p style="font-size:1.5rem;">Ek is baie lief vir jou!</p>
                     <div style="font-size:100px;">😘</div>
                 </div>
             `;
